# autoware

ros/src/computing/perception/detection/trafficlight_recognizer/: CMakeLists.txt  README.md  package.xml
ros/src/computing/perception/detection/trafficlight_recognizer/include/: feat_proj_bbox.h
ros/src/computing/perception/detection/trafficlight_recognizer/include/trafficlight_recognizer/: feat_proj_bbox.h  kcf_tracker.h  kcf_tracker_node.h  traffic_light_classifier.h  utils.h  visualizer_node.h
ros/src/computing/perception/detection/trafficlight_recognizer/launch/: arrow_recognition_sample.launch  detected_boxes_visualizer.launch  detecter_and_tracker_fuser.launch  dummy_feat_proj_bbox.launch  feat_proj_bbox.launch  hsv_color_filter.launch  tlr_classifier.launch  tlr_kcf_tracker.launch  tlr_ssd_detector.launch  tlr_visualizer.launch  tracker.launch  traffilight_recognizer.launch
ros/src/computing/perception/detection/trafficlight_recognizer/lib/: utils.cpp
ros/src/computing/perception/detection/trafficlight_recognizer/nodes/feat_proj/: feat_proj.cpp  feat_proj_bbox.cpp
ros/src/computing/perception/detection/trafficlight_recognizer/nodes/tlr_classifier/: traffic_light_classifier.cpp  traffic_light_classifier.h  traffic_light_classifier_node.cpp
ros/src/computing/perception/detection/trafficlight_recognizer/nodes/tlr_detector/scripts/: chainer_ssd_tlr_detector.py
ros/src/computing/perception/detection/trafficlight_recognizer/nodes/tlr_tracker/: kcf_tracker.cpp  kcf_tracker_node.cpp
ros/src/computing/perception/detection/trafficlight_recognizer/nodes/tlr_tracker/include/tlr_tracker/: kcf_tracker.h
ros/src/computing/perception/detection/trafficlight_recognizer/nodes/tlr_tracker/src/: kcf_tracker.cpp
ros/src/computing/perception/detection/trafficlight_recognizer/nodes/tlr_visualizer/: visualizer_node.cpp
ros/src/computing/perception/detection/trafficlight_recognizer/plugins/: trafficlight_recognizer.xml
ros/src/computing/perception/detection/trafficlight_recognizer/scripts/: arrow_recognition_sample.py  detecter_and_tracker_fuser.py  dummy_signal_publisher.py  dummy_stamped_roi_publisher.py  dummy_yolo3_detected_boxes.py  image_array_to_image.py  kcf_tracking.py  original_location_box_publisher.py  tracker.py  trafficlight_classification.py  yolo3_visualizer.py  yolo3_vizualizer.py
ros/src/computing/perception/detection/trafficlight_recognizer/test/: test_feat_proj_bbox.cpp  test_feat_proj_bbox.launch  test_feat_proj_bbox.test  test_kcf_tracker_node.cpp  test_kcf_tracker_node.test  test_tlr_ssd_detector.test  test_traffic_light_classifier.cpp  test_traffic_light_classifier.test  test_traffic_light_classifier_node.test
ros/src/msgs/autoware_msgs/: CMakeLists.txt
ros/src/msgs/autoware_msgs/msg/: LampState.msg  LampStateArray.msg  StampedRoi.msg  StampedRoiArray.msg  TrafficLightState.msg  TrafficLightStateArray.msg
